kubernetes/manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: express-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: express-api
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: express-api
    spec:
      containers:
      - image: 047641257708.dkr.ecr.ap-south-1.amazonaws.com/express-api:1693403025
        imagePullPolicy: Always
        name: express-api
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: backend
  name: express-api-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: express-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "express-api"
  namespace: "backend"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: express-api-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "express-api-service"
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: rails-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rails-api
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rails-api
    spec:
      containers:
      - image: 047641257708.dkr.ecr.ap-south-1.amazonaws.com/rails-api:1693404702
        imagePullPolicy: Always
        name: rails-api
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: backend
  name: rails-api-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: rails-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "rails-api"
  namespace: "backend"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: rails-api-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "rails-api-service"
              servicePort: 80
